# schakl

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE-COMMERCIAL.md  PROMPT.md  README.md  SECURITY_AUDIT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .dockerignore  Dockerfile  Dockerfile.dockerignore  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 07c40a445f44_subscriptions_add_types_templates.py  (+123 more)
apps/api/app/: config.py  db.py  errors.py  i18n.py  main.py  models.py  openapi_export.py  registry.py  schemas.py  seed.py  worker.py
apps/api/app/core/: nav.py  (+29 more)
apps/api/tests/: conftest.py  test_activity_api.py  test_ai_api.py  test_api_keys.py  test_assignees.py  test_audit_adversarial.py  test_audit_adversarial_phase2.py  test_auth_oidc_gate.py  test_automation_api.py  test_automation_conditions.py  test_automation_engine.py  test_budget_hours.py  test_change_email.py  test_checklist_templates.py  test_client_role_horizon.py  test_cloud.py  test_companies_api.py  test_company_groups.py  test_contact_links.py  test_contact_portal.py  test_contact_types.py  test_contacts_api.py  test_contacts_sort.py  test_customfields.py  test_dashboard_and_branding.py  test_demo_mode.py  test_domains_api.py  test_domains_sort.py  test_email_branding.py  test_email_settings.py  test_email_templates.py  test_entitlements.py  test_files_api.py  test_google_calendar.py  test_google_core.py  test_google_drive.py  test_google_drive_folders.py  test_google_gmail.py  test_hosting_api.py  test_hr_dossier.py  (+78 more)
(+930 files in other folders)
