[project]
name = "schakl-api"
version = "0.0.0"
description = "schakl API — multi-tenant, modular agency operations platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "fastapi-users[sqlalchemy]>=14.0",
    "pwdlib[argon2]>=0.2.1",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "arq>=0.26",
    "redis>=5.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2",
    "dnspython>=2.6",
    # Strips raw HTML from stored markdown on write (issue #66); the render-side sanitizer is the
    # other half. Rust-backed (ammonia), so it adds no meaningful startup or per-write cost.
    "nh3>=0.2.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "asgi-lifespan>=2.1",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `Depends(...)`/`Query(...)` in defaults is the FastAPI idiom.
# UP046: keep `Generic[T]` subclassing (works cleanly with Pydantic v2 generics).
ignore = ["B008", "UP046"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
